Revert "fix: fix browser bug in Safari when content overflows due to the border-radius value set."
This reverts commit 741b202f495124b436e2e8862700f531c12af647.

--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -75,11 +75,10 @@ bolt-blockquote {
 .c-bolt-blockquote {
   @include bolt-margin(0);
 
-  &:before,
-  &:after {
+  &:before, &:after {
     width: 100%;
-    height: $bolt-blockquote-border-width;
     max-width: 300px;
+    height: $bolt-blockquote-border-width;
     content: '';
     vertical-align: top;
     background-color: $bolt-blockquote-border-color;
@@ -111,8 +110,7 @@ bolt-blockquote {
   color: inherit;
   color: var(--bolt-theme-heading, inherit);
 
-  p:first-child:before,
-  p:last-child:after {
+  p:first-child:before, p:last-child:after {
     font-family: 'Georgia', serif; // TODO: Replace with Noto Serif when it is added.
   }
 
@@ -126,22 +124,15 @@ bolt-blockquote {
 }
 
 
-/**
- * 1. Workaround to address weird Safari bug w/ overflow + border radius
- *    https://gist.github.com/adamcbrewer/5859738#gistcomment-2008691
- */
-
 // Attribution
 .c-bolt-blockquote__image {
   display: inline-block;
-  position: relative; /* [1] */
-  z-index: 1; /* [1] */
   width: $bolt-blockquote-image-size;
   height: $bolt-blockquote-image-size;
   border-width: $bolt-blockquote-image-border-width;
   border-style: $bolt-blockquote-image-border-style;
   border-color: $bolt-blockquote-image-border-color;
-  border-radius: 50%;
+  border-radius: 100em;
   overflow: hidden;
 }
 
